--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     image: postgres:alpine
     env_file:
       - ./.env
+    ports:
+      - "5432:5432"
     volumes:
        - postgres_vol:/var/lib/postgresql/data
        - ./init.sql:/docker-entrypoint-initdb.d/init.sql
